--- a/BookStoreBackEnd/pom.xml
+++ b/BookStoreBackEnd/pom.xml
@@ -75,6 +75,13 @@
 			<version>4.3.1.Final</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-commons -->
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-commons</artifactId>
+		    <version>1.13.1.RELEASE</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
